--- a/src/app.postcss
+++ b/src/app.postcss
@@ -4,6 +4,9 @@
 @tailwind utilities;
 
 @layer base {
+  ::-moz-selection { background: var(--lt-color-gray-500); color: var(--lt-color-gray-900); }
+  ::selection { background: var(--lt-color-gray-500); color: var(--lt-color-gray-900); }
+
   body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
