--- a/src/app.postcss
+++ b/src/app.postcss
@@ -4,8 +4,8 @@
 @tailwind utilities;
 
 @layer base {
-  ::-moz-selection { background: #F29600; color: var(--lt-color-white); }
-  ::selection { background: #F29600; color: var(--lt-color-white); }
+  ::-moz-selection { background: var(--lt-color-gray-900); color: var(--lt-color-white); }
+  ::selection { background: var(--lt-color-gray-900); color: var(--lt-color-white); }
 
   body {
     -webkit-font-smoothing: antialiased;
