rellink to font

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -21,8 +21,8 @@
 		font-family: 'GreycliffCF';
 		font-weight: 500;
 		src:
-			url('./static/fonts/GreycliffCF-Medium.woff2') format('woff2'),
-			url('./static/fonts/GreycliffCF-Medium.woff') format('woff');
+			url('static/fonts/GreycliffCF-Medium.woff2') format('woff2'),
+			url('static/fonts/GreycliffCF-Medium.woff') format('woff');
 		font-display: swap;
 	}
 	@font-face {
