--- a/src/app.css
+++ b/src/app.css
@@ -21,16 +21,16 @@
 		font-family: 'GreycliffCF';
 		font-weight: 500;
 		src:
-			url('/fonts/GreycliffCFMedium.woff2') format('woff2'),
-			url('/fonts/GreycliffCFMedium.woff') format('woff');
+			url('../../../../fonts/GreycliffCFMedium.woff2') format('woff2'),
+			url('../../../../fonts/GreycliffCFMedium.woff') format('woff');
 		font-display: swap;
 	}
 	@font-face {
 		font-family: 'GreycliffCF';
 		font-weight: 600;
 		src:
-			url('/fonts/GreycliffCFDemiBold.woff2') format('woff2'),
-			url('/fonts/GreycliffCFDemiBold.woff') format('woff');
+			url('../../../../fonts/GreycliffCFDemiBold.woff2') format('woff2'),
+			url('../../../../fonts/GreycliffCFDemiBold.woff') format('woff');
 		font-display: swap;
 	}
 	@font-face {
@@ -38,16 +38,16 @@
 		font-weight: 600;
 		font-style: italic;
 		src:
-			url('/fonts/GreycliffCFDemiBoldOblique.woff2') format('woff2'),
-			url('/fonts/GreycliffCFDemiBoldOblique.woff') format('woff');
+			url('../../../../fonts/GreycliffCFDemiBoldOblique.woff2') format('woff2'),
+			url('../../../../fonts/GreycliffCFDemiBoldOblique.woff') format('woff');
 		font-display: swap;
 	}
 	@font-face {
 		font-family: 'GreycliffCF';
 		font-weight: 900;
 		src:
-			url('/fonts/GreycliffCFHeavy.woff2') format('woff2'),
-			url('/fonts/GreycliffCFHeavy.woff') format('woff');
+			url('../../../../fonts/GreycliffCFHeavy.woff2') format('woff2'),
+			url('../../../../fonts/GreycliffCFHeavy.woff') format('woff');
 		font-display: swap;
 	}
 }
